# pfsconfig_redaction

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: generate-requirementstxt.yml  tests.yml
src/pfs_blackout_design/: MaskedPfsDesign.py  __init__.py  utils.py
src/pfs_blackout_design/cli/: blackout_design.py
src/pfsconfig_redaction/: __init__.py  utils.py
tests/: conftest.py  test_edge_cases.py  test_import.py  test_integration.py  test_performance.py  test_utils.py
tmp/examples/: pfsConfig-0x4f966fa98c958b91-000001.fits  pfsDesign-0x4f966fa98c958b91.fits
